bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value char
while (! finished){char getIndication();
                   ^BDR:4: error: not found: value char
                  if (char getIndication() = "R") {right();
                      ^BDR:6: error: not found: value char
                  if (char getIndication() = "L") {left();
                      ^BDR:8: error: not found: value char
                  if (char getIndication() = "I") {left();
                      ^BDR:11: error: not found: value char
                  if (char getIndication() = "A") {forward()}
                      ^BDR:12: error: not found: value char
                  if (char getIndication() = "B") {forward();
                      ^BDR:14: error: not found: value char
                  if (char getIndication() = "C") {forward();
                      ^BDR:17: error: not found: value char
                  if (char getIndication() = "Z") {backward()}
                      ^BDR:18: error: not found: value char
                  if (char getIndication() = "Y") {backward();
                      ^BDR:20: error: not found: value char
                  if (char getIndication() = "X") {backward();
                      ^